monitor-app-deploy/prometheus-deploy/conf/04-prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: svc-prometheus
  namespace: monitor-app
spec:
  ports:
    - port: 9090
      name: prometheus
  selector:
    app: prometheus
