monitor-app-deploy/prometheus-deploy/conf/05-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: monitor-app
  labels:
    app: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - prometheus.internal.internal.d7z.net
      secretName: tls-pri-d7z
  rules:
    - host: prometheus.internal.internal.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-prometheus
                port:
                  name: prometheus
